# flucoma-docs

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  generate_html.sh  harvest-sc-examples.scd  list_python_tests.py  parse-render-flucomas.scd  render-flucoma-docs-only.scd  requirements.txt  spellcheck.py  ted-issues-220127.md
.github/workflows/: json_api.yml
code-docs/: index.md
doc/: AmpFeature.rst  AmpGate.rst  AmpGate.yaml  AmpSlice.rst  AmpSlice.yaml  AudioTransport.rst  AudioTransport.yaml  BufAmpFeature.rst  BufAmpGate.rst  BufAmpGate.yaml  BufAmpSlice.rst  BufAmpSlice.yaml  BufAudioTransport.rst  BufAudioTransport.yaml  BufChroma.rst  BufChroma.yaml  BufCompose.rst  BufCompose.yaml  BufFlatten.rst  BufFlatten.yaml  BufHPSS.rst  BufHPSS.yaml  BufLoudness.rst  BufLoudness.yaml  BufMFCC.rst  BufMFCC.yaml  BufMelBands.rst  BufMelBands.yaml  BufNMF.rst  BufNMF.yaml  BufNMFCross.rst  BufNMFCross.yaml  BufNMFSeed.rst  BufNNDSVD.rst  BufNNDSVD.yaml  BufNoveltyFeature.rst  BufNoveltySlice.rst  BufNoveltySlice.yaml  BufOnsetFeature.rst  BufOnsetSlice.rst  (+109 more)
example-code/sc/: AmpFeature.scd  AmpGate.scd  AmpSlice.scd  AudioTransport.scd  BufAmpFeature.scd  BufAmpGate.scd  BufAmpSlice.scd  BufAudioTransport.scd  BufChroma.scd  BufCompose.scd  BufFlatten.scd  BufHPSS.scd  BufLoudness.scd  BufMFCC.scd  BufMelBands.scd  BufNMF.scd  BufNMFCross.scd  BufNNDSVD.scd  BufNoveltyFeature.scd  BufNoveltySlice.scd  BufOnsetFeature.scd  BufOnsetSlice.scd  BufPitch.scd  BufSTFT.scd  BufScale.scd  BufSelect.scd  BufSelectEvery.scd  BufSineFeature.scd  BufSines.scd  BufSpectralShape.scd  BufStats.scd  BufThreadDemo.scd  BufThresh.scd  BufTransientSlice.scd  BufTransients.scd  Chroma.scd  DTW.scd  DataSet.scd  DataSetQuery.scd  Gain.scd  (+36 more)
flucoma/: DefaultData.py  FluidRefData.py  MakeRef.py  SCDocWriter.py  yaml2rst.py
flucoma/doc/: data.py  defaults.py  driver.py  learn.py  logger.py  merge.py  render.py  transformers.py
flucoma/doc/cli/: driver.py
flucoma/doc/legacy/: adaptor.py
flucoma/doc/max/: defaults.py  driver.py
flucoma/doc/pd/: defaults.py  driver.py
flucoma/doc/raw/: driver.py
flucoma/doc/rst/: common.py  docutils.py  html.py  parse_object.py  references.py  scdoc.py
flucoma/doc/sc/: defaults.py  driver.py  writer.py
flucoma/doc/templates/: cli_htmlref.html  maxref.xml  maxvig.xml  pd_htmlref.html  pd_htmltopic.html  schelp_base.schelp  schelp_buffer-proc.schelp  schelp_buffer-transformer.schelp  schelp_controls.schelp  schelp_data.schelp  schelp_descriptor.schelp  schelp_enum.schelp  schelp_slicer.schelp  schelp_topic.schelp  schelp_transformer.schelp  schelp_transformer[2].schelp
flucoma/doc/test/: TestDocValidation.py  TestRst2SCDoc.py  data.py  learn_link.py  testMerge.py  test_fieldlist_parser.py  test_only_directive.py
flucoma/doc/validate/: common.py  controls.py  messages.py  object.py
flucoma/templates/: maxref.xml  pd_htmlref.html
flucoma/test/: TestRst2SCDoc.py
include/: FluidParameterDump.hpp
sc_code/: AmpSlice.scd  BufNMF.scd  BufPitch.scd  NMFFilter.scd  NMFMatch.scd  Pitch.scd  Waveform.scd  buf NMF on server.scd  fluidbufpitch sort.scd
script/: FlucomaDocs.cmake  FluidRefData.py  MakeDocSource.cmake  MakeMaxRef.py  MakeRef.py  dump-posttarget.cmake  dump-pretarget.cmake
script/templates/: cli_htmlref.html  cli_htmltopic.html  maxref.xml  maxvig.xml  pd_htmlref.html
src/: generatesrc.sh
src/clients/AmpFeature/: AmpFeature.cpp
src/clients/AmpGate/: AmpGate.cpp
src/clients/AmpSlice/: AmpSlice.cpp
src/clients/AudioTransport/: AudioTransport.cpp
src/clients/BufAmpFeature/: BufAmpFeature.cpp
src/clients/BufAmpGate/: BufAmpGate.cpp
src/clients/BufAmpSlice/: BufAmpSlice.cpp
src/clients/BufAudioTransport/: BufAudioTransport.cpp
src/clients/BufChroma/: BufChroma.cpp
src/clients/BufCompose/: BufCompose.cpp
src/clients/BufFlatten/: BufFlatten.cpp
src/clients/BufHPSS/: BufHPSS.cpp
src/clients/BufLoudness/: BufLoudness.cpp
src/clients/BufMFCC/: BufMFCC.cpp
src/clients/BufMelBands/: BufMelBands.cpp
src/clients/BufNMF/: BufNMF.cpp  CMakeLists.txt
src/clients/BufNMFCross/: BufNMFCross.cpp
src/clients/BufNNDSVD/: BufNNDSVD.cpp
src/clients/BufNoveltyFeature/: BufNoveltyFeature.cpp
src/clients/BufNoveltySlice/: BufNoveltySlice.cpp
src/clients/BufOnsetFeature/: BufOnsetFeature.cpp
src/clients/BufOnsetSlice/: BufOnsetSlice.cpp
src/clients/BufPitch/: BufPitch.cpp
src/clients/BufSTFT/: BufSTFT.cpp
src/clients/BufScale/: BufScale.cpp
src/clients/BufSelect/: BufSelect.cpp
src/clients/BufSelectEvery/: BufSelectEvery.cpp
src/clients/BufSines/: BufSines.cpp
src/clients/BufSpectralShape/: BufSpectralShape.cpp
src/clients/BufStats/: BufStats.cpp
src/clients/BufThreadDemo/: BufThreadDemo.cpp
src/clients/BufThresh/: BufThresh.cpp
src/clients/BufTransientSlice/: BufTransientSlice.cpp
src/clients/BufTransients/: BufTransients.cpp
src/clients/Chroma/: Chroma.cpp
src/clients/DataSet/: DataSet.cpp
src/clients/DataSetQuery/: DataSetQuery.cpp
src/clients/Gain/: Gain.cpp
src/clients/Grid/: Grid.cpp
src/clients/HPSS/: HPSS.cpp
src/clients/KDTree/: KDTree.cpp
src/clients/KMeans/: KMeans.cpp
src/clients/KNN/: KNN.cpp
src/clients/KNNClassifier/: KNNClassifier.cpp
src/clients/KNNRegressor/: KNNRegressor.cpp
src/clients/LabelSet/: LabelSet.cpp
src/clients/Loudness/: Loudness.cpp
src/clients/MDS/: MDS.cpp
src/clients/MFCC/: MFCC.cpp
src/clients/MLPClassifier/: MLPClassifier.cpp
src/clients/MLPRegressor/: MLPRegressor.cpp
src/clients/MelBands/: MelBands.cpp
src/clients/NMFFilter/: NMFFilter.cpp
src/clients/NMFMatch/: NMFMatch.cpp
src/clients/NMFMorph/: NMFMorph.cpp
src/clients/Normalize/: Normalize.cpp
src/clients/NoveltyFeature/: NoveltyFeature.cpp
src/clients/NoveltySlice/: CMakeLists.txt  NoveltySlice.cpp
src/clients/OnsetFeature/: OnsetFeature.cpp
src/clients/OnsetSlice/: OnsetSlice.cpp
src/clients/PCA/: PCA.cpp
src/clients/Pitch/: Pitch.cpp
src/nmfclient/: nmfclient.cpp
topics/: FluidCorpusManipulationToolkit.yaml
xslt/: _c74_ref_common.xsl
(+9 files in other folders)
